k8s/overlays/qa/image-pull-policy-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vuelos
  namespace: grupo1-qa
spec:
  template:
    spec:
      containers:
        - name: vuelos
          imagePullPolicy: IfNotPresent
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pistas
  namespace: grupo1-qa
spec:
  template:
    spec:
      containers:
        - name: pistas
          imagePullPolicy: IfNotPresent
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasas
  namespace: grupo1-qa
spec:
  template:
    spec:
      containers:
        - name: tasas
          imagePullPolicy: IfNotPresent
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: grupo1-qa
spec:
  template:
    spec:
      containers:
        - name: gateway
          imagePullPolicy: IfNotPresent
