k8s/overlays/qa/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atc-ingress
spec:
  ingressClassName: traefik
  rules:
    - host: qa.grupo1.uta.cl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 80
